# CopyPaste

./: .editorconfig  .gitattributes  .gitignore  .markdownlintignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CopyPaste.slnx  Directory.Build.props  LICENSE  PRIVACY.md  README.md  RELEASING.md  SECURITY.md  appcast.xml  codecov.yml  coverage.listener.runsettings  coverage.runsettings  pubspec.yaml  release-manifest.json  setup.iss
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  (+1 more)
CopyPaste.Core/: AppLogger.cs  BackupManifest.cs  BackupService.cs  CardColor.cs  Class1.cs  CleanupService.cs  ClipboardContentType.cs  ClipboardHelper.cs  ClipboardItem.cs  ClipboardService.cs  ConfigLoader.cs  CopyPaste.Core.csproj  CopyPasteEngine.cs  FileExtensions.cs  FocusHelper.cs  GlobalSuppressions.cs  IClipboardListener.cs  IClipboardRepository.cs  IClipboardService.cs  LiteDbRepository.cs  MetadataJsonContext.cs  MyMConfig.cs  PackageHelper.cs  SearchHelper.cs  SqliteRepository.cs  StartupHelper.cs  StorageConfig.cs  ThumbnailConfig.cs  UpdateChecker.cs  WindowsThumbnailExtractor.cs
CopyPaste.Core.Tests/: BackupServiceTests.cs  CleanupServiceTests.cs  ClipboardServiceTests.cs  CopyPaste.Core.Tests.csproj  FileExtensionsTests.cs  PackageHelperTests.cs  SearchHelperTests.cs  SqliteRepositoryTests.cs  StartupHelperTests.cs  StorageConfigTests.cs  ThumbnailConfigTests.cs  UpdateCheckerTests.cs
CopyPaste.Launcher/: app.manifest  main.cpp
CopyPaste.Listener/: CopyPaste.Listener.csproj  Program.cs  WindowsClipboardListener.cs
CopyPaste.Listener.Tests/: CopyPaste.Listener.Tests.csproj  WindowsClipboardListenerTests.cs
CopyPaste.UI/: App.xaml  App.xaml.cs  ClipboardItemViewModel.cs  ConfigWindow.xaml  ConfigWindow.xaml.cs  CopyPaste.UI.csproj  GlobalSuppressions.cs  HelpWindow.xaml  HelpWindow.xaml.cs  HotkeyHelper.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeSplash.cs  Package.appxmanifest  UIConfig.cs  WelcomeWindow.xaml  WelcomeWindow.xaml.cs  app.manifest  rd.xml
CopyPaste.UI.Tests/: ClipboardItemViewModelTests.cs  CopyPaste.UI.Tests.csproj  MainViewModelTests.cs  UIConfigTests.cs
app/: .metadata  pubspec.yaml  test_output.txt
core/: last_cleanup.txt  pubspec.yaml  test_output.txt
docs/: CONFIGURATION.md  THUMBNAIL_CONFIG.md  THUMBNAIL_CONFIG_EN.md  THUMBNAIL_CONFIG_ES.md  UI-CONFIG_EN.md  UI-CONFIG_ES.md
listener/: .metadata  pubspec.yaml
listener/linux/: CMakeLists.txt  listener_plugin.c  listener_plugin_private.h
v1/: coverage.core.runsettings  coverage.runsettings  coverage.ui.runsettings
v2/: analysis_options.yaml
(+460 files in other folders)
